Added support for Serie's Images

--- a/MangaCrawlerLib/MangaCrawlerLib.csproj
+++ b/MangaCrawlerLib/MangaCrawlerLib.csproj
@@ -101,7 +101,7 @@
     <Compile Include="Crawlers\AnimeSourceCrawler.cs" />
     <Compile Include="Chapter.cs" />
     <Compile Include="Crawler.cs" />
-    <Compile Include="Crawlers\StarkanaCrawler.cs" />
+    <None Include="Crawlers\StarkanaCrawler.cs" />
     <Compile Include="DownloadManager.cs" />
     <Compile Include="Crawlers\MangaFoxCrawler.cs" />
     <Compile Include="Crawlers\MangaShareCrawler.cs" />
